tests/error/static_assert_requires_semicolon.c
// fail "Expected a ';' after _Static_assert."

_Static_assert(1 == 1, "")

int main(){
    
}
